[package]
name = "r7z"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
mimalloc = "0.1"
rust7z = {git = "https://github.com/nyfair/rust7z"}

[build-dependencies]
napi-build = "1"
